<resources>
    <string name="app_name">ToDo</string>
    <string name="createButton">Create</string>
    <string name="deleteButton">Delete</string>
    <string name="updateButton">Update</string>
    <string name="saveButton">Save</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="deleteTitle">Delete ToDo</string>
    <string name="message">Do you really want to delete this?</string>
    <string name="decline">No</string>
    <string name="accept">Yes</string>


</resources>